--- a/test-game.html
+++ b/test-game.html
@@ -127,8 +127,6 @@
     <footer>
         <p>Contact: <span class="copyable" onclick="copyToClipboard('kerbalengineer098@gmail.com')">kerbalengineer098@gmail.com</span> | <a href="https://github.com/KerbalEngineering">GitHub</a></p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/examples/js/loaders/GLTFLoader.js"></script>
     <script>
         function copyToClipboard(text) {
             const tempInput = document.createElement('textarea');
@@ -139,10 +137,14 @@
             document.body.removeChild(tempInput);
             alert('Copied to clipboard: ' + text);
         }
-
+    </script>
+    <script src="/lib/three.min.js"></script>
+    <script src="/lib/GLTFLoader.js"></script>
+    <script>
         if (typeof THREE === 'undefined') {
-            console.error('Three.js failed to load. Check CDN or network.');
+            console.error('Three.js failed to load. Check /lib/three.min.js path.');
         } else {
+            console.log('Three.js loaded successfully');
             const scene = new THREE.Scene();
             const camera = new THREE.PerspectiveCamera(75, 800 / 600, 0.1, 1000);
             const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('stationCanvas') });
@@ -155,8 +157,10 @@
                 scene.add(stationModule);
                 stationModule.position.set(0, 0, 0);
                 stationModule.scale.set(1, 1, 1);
-                console.log('Model loaded successfully');
-            }, undefined, (error) => {
+                console.log('Model loaded successfully:', gltf.scene);
+            }, (progress) => {
+                console.log('Loading progress:', progress.loaded / progress.total * 100 + '%');
+            }, (error) => {
                 console.error('Error loading GLTF:', error);
             });
 
